infra/igw.tf
resource "aws_internet_gateway" "igw" {
 vpc_id = aws_vpc.main-vpc.id
tags = {
 Name = "main-VPC-IGW"
 }
}
